--- a/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
@@ -147,20 +147,22 @@
                                     <th scope="col" class="text-center">No.</th>
                                     <th scope="col" class="text-center">Log Action</th>
                                     <th scope="col" class="text-center">Email</th>
-                                    <th scope="col" class="text-center">DateTime</th>
+                                    <th scope="col" class="text-center">Date & Time</th>
+                                    <th scope="col" class="text-center">Validated By</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for logs in systemLogs %}
+                                {% for logs in validate_logs %}
                                 <tr>
                                     <td class="text-center"></td>
-                                    {% if logs.log_action == "logged in" or logs.log_action == "Logged IN" %}
-                                        <td class="text-center text-uppercase text-success fw-bold">{{ logs.log_action }}</td>
+                                    {% if logs.is_validated == True %}
+                                        <td class="text-center text-uppercase text-success fw-bold">Validate</td>
                                     {% else %}
-                                        <td class="text-center text-uppercase text-danger fw-bold">{{ logs.log_action }}</td>
+                                        <td class="text-center text-uppercase text-danger fw-bold">Delete</td>
                                     {% endif %}
-                                    <td class="text-center">{{ logs.log_email }}</td>
-                                    <td class="text-center">{{ logs.datetime_log }}</td>
+                                    <td class="text-center text-uppercase text-danger fw-bold">{{ logs.user }}</td>
+                                    <td class="text-center">{{ logs.history_date }}</td>
+                                    <td class="text-center">{{ logs.history_user }}</td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
