--- a/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
@@ -1,6 +1,27 @@
-{% extends 'activities/Admin Home.html' %} <!-- header and footer of page linked from admin home html file -->
 {% load static %}
 {% block dashboard %}
+
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- table layout -->
+    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
+    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
+
+    <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>
+    <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/y-icon">
+    <link rel="stylesheet" href="{% static '/CSS/DataTables/datatables.min.css' %}">
+    <script src="{% static '/CSS/DataTables/datatables.js' %}"></script>
+    <link rel="stylesheet" href="{% static '/CSS/DataTables/Buttons-1.7.1/css/buttons.bootstrap5.css' %}">
+    <script src="{% static '/CSS/DataTables/Buttons-1.7.1/js/buttons.bootstrap5.js' %}"></script>
+
+
 
 <title>PPMS | History Logs </title>
 </head>
@@ -175,62 +196,57 @@
     <br>
     <hr>
 
-    <!--------------------- DataTables for Parents --------------------->
-    <div class="text-black pt-3">
-        <div class="row">
-            <div class="col">
-                <div class="card-header">
-                    <h3>Validation Logs</h3>
-
-                </div>
-                <div class="card shadow-lg p-3 bg-white rounded" >
-                    <div class="table-responsive" >
-                        <table class="table table-hover table-cell-border" id="parentUser_table" >
-                            <thead>
-                                <tr>
-                                    <th scope="col" class="text-center">No.</th>
-                                    <th scope="col" class="text-center">Last Name</th>
-                                    <th scope="col" class="text-center">First Name</th>
-                                    <th scope="col" class="text-center">Middle Name</th>
-                                    <th scope="col" class="text-center">Suffix</th>
-                                    <th scope="col" class="text-center">Phone Number</th>
-                                    <th scope="col" class="text-center">Email</th>
-                                    <th scope="col" class="text-center">Barangay Designation</th>
-                                    <th scope="col" class="nosort text-center">Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for parent in parents %}
-                                <tr>
-                                    <td class="text-center"></td>
-                                    <td class="text-center">{{ parent.user.last_name }}</td>
-                                    <td class="text-center">{{ parent.user.first_name }}</td>
-                                    <td class="text-center">{{ parent.user.middle_name }}</td>
-                                    <td class="text-center">{{ parent.user.suffix_name }}</td>
-                                    <td class="text-center">{{ parent.user.phone_num }}</td>
-                                    <td class="text-center">{{ parent.user.email }}</td>
-                                    <td class="text-center">{{ parent.barangay }}</td>
-                                    <td style="text-align: center;">
-                                        <div class="text-center">
-                                            <a href="{% url 'set_pass' parent.user.id %}"><button type="button" style="background-color: #188045; color: #ffffff;" class="btn hoverableButton" title="Reset password"><i class="fa fa-lg fa-fw fa-key"></i></button></a>
-                                        </div>
-                                    </td>
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
+        <!-- Footer -->
+    <div class="footer text-muted">
+        <div class="container">
+            <div class="row text-center align-items-center">
+                    <div class="border-top p-4">
+                        <p class="copyright"><small>
+                        Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
+                        </small>
+                        </p>
                     </div>
-                </div>
             </div>
-        </div>
-    </div>
-        <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-        <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
-            
+        </div>  
         <script>
             var t2 = $('#systemLogs_table').DataTable({
                 info: 'true',
-                dom: 'rftip',
+                dom: 'Blrftip',
+                buttons: [
+                    {
+                    extend: 'excelHtml5',
+                    text: 'Generate Excel ',
+                    title: 'Sysyem Logs ' +' | {{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
+                    autoFilter: true,
+
+                    },
+                    {
+                    extend: 'pdfHtml5',
+                    orientation: 'portrait',
+                    pageSize: 'LEGAL',
+                    download: 'open',
+                    text: 'Generate PDF ',
+                    title: 'Systen Validation Logs | ' + '{{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
+                    customize: function(doc){
+
+                        action = t2.column(1).data().toArray();
+                        for (var i = 0; i < action.length; i++){
+                            var val = (action[i])
+                            if (val == 'Validate'){
+                                doc.content[1].table.body[i + 1][1].color = '#28a745';
+                            }
+                            else {
+                                doc.content[1].table.body[i + 1][1].color = '#dc3545';
+                            }
+                        };
+                        doc.defaultStyle.fontSize = 12; //2, 3, 4,etc
+                        doc.styles.tableHeader.fontSize = 12; //2, 3, 4, etc
+                        doc.styles.tableHeader.alignment = 'center';
+                        doc.content[1].alignment = 'center';
+                        doc.content[1].table.widths = [ '10%', '20%',  '20%', '25%',  '25%',];
+                    }
+                },
+                ],
                 pageLength : 10,   
                 aoColumnDefs: [{
                     'bSortable': false,
@@ -247,25 +263,9 @@
                 });}).draw();
         </script>
 
-        <script>
-            var t = $('#parentUser_table').DataTable({
-                info: 'true',
-                dom: 'rftip',
-                pageLength : 10,   
-                aoColumnDefs: [{
-                    'bSortable': false,
-                    'aTargets': ['nosort'],
-                    'orderable': false,
-                    'targets': [0,8],
-                }],
-                order: [[1, 'asc']],
-                });
-                t.on('order.dt search.dt', function () {
-                let i = 1;
-                t.cells(null, 0, { search: 'applied', order: 'applied' }).every(function (cell) {
-                    this.data(i++);
-                });}).draw();
-        </script>
+        <script src="{% static '/Javascript/js/functions.js' %}"></script>
+        <script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 </div>
 {% endblock %}
