Immu Button - BHW

--- a/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
@@ -226,7 +226,7 @@
                     pageSize: 'LEGAL',
                     download: 'open',
                     text: 'Generate PDF ',
-                    title: 'Systen Validation Logs | ' + '{{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
+                    title: 'System Validation Logs | ' + '{{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
                     customize: function(doc){
 
                         action = t2.column(1).data().toArray();
