--- a/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
@@ -145,7 +145,7 @@
         <div class="">
             <div class="row"> 
                 <div class="col">
-                    <h3 style="text-align:left;">History Logs</h3>
+                    <h3 style="text-align:left;">System Logs</h3>
                 </div>
             </div>
         <hr>
@@ -157,7 +157,7 @@
         <div class="row">
             <div class="col">
                 <div class="card-header">
-                    <h3> System Logs</h3>
+                    <h3> BHW Validation Logs</h3>
 
                 </div>
                 <div class="card shadow-lg p-3 bg-white rounded" >
@@ -181,7 +181,7 @@
                                     {% else %}
                                         <td class="text-center text-uppercase text-danger fw-bold">Delete</td>
                                     {% endif %}
-                                    <td class="text-center text-uppercase text-danger fw-bold">{{ logs.user }}</td>
+                                    <td class="text-center text-uppercase ">{{ logs.user }}</td>
                                     <td class="text-center">{{ logs.history_date }}</td>
                                     <td class="text-center">{{ logs.history_user }}</td>
                                 </tr>
@@ -193,9 +193,7 @@
             </div>
         </div>
     </div>
-    <br>
-    <hr>
-
+</div>
         <!-- Footer -->
     <div class="footer text-muted">
         <div class="container">
@@ -268,4 +266,5 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 </div>
+
 {% endblock %}
