--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -212,6 +212,114 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+                <div class="col">
+                    <div class="card-header">
+                        <h4>List of Preschoolers</h4>
+                    </div>
+                    <div class="card shadow-lg p-3 bg-white rounded" >
+                        <div class="d-flex justify-content-end my-2">
+                            <button class="btn hoverableButton" type="button" id="adminArchive" data-bs-toggle="modal" data-bs-target="#modalArc" style="max-width: 15%!important;"><h6 style="padding:5px;margin-bottom: 0px !important;"><i class="fa fa-archive"></i> View Archive</h6></button>
+                        </div>
+                        <div class="table-responsive" >
+                            <table class="table table-hover table-cell-border" id="adminPreschoolerList" >
+                                <thead>
+                                    <tr style="text-align: center;">
+                                        <th scope="col">No</th>
+                                        <th scope="col">Last Name</th>
+                                        <th scope="col">First Name</th>
+                                        <th scope="col">Middle Name</th>
+                                        <th scope="col">Suffix</th>
+                                        <th scope="col">Gender</th>
+                                        <th scope="col">Birthdate</th>
+                                        <th scope="col">Age Last Measured (Month)</th>
+                                        <th scope="col">WFA STATUS</th>
+                                        <th scope="col">HFA STATUS</th>
+                                        <th scope="col">WHFA STATUS</th>
+                                        <th scope="col">Vaccine status</th>
+                                    </tr>   
+                                </thead>
+                                <tbody>
+                                    {% for preschooler in preschooler_with_record %}
+                                    <tr style="text-align: center;">
+                                        <td></td>
+                                        <td>{{ preschooler.last_name }}</td>
+                                        <td>{{ preschooler.first_name }}</td>
+                                        <td>{{ preschooler.middle_name }}</td>
+                                        <td>{{ preschooler.suffix_name }}</td>
+                                        {% if preschooler.gender == 'Male' %}
+                                        <td class="text-uppercase textShadow" style="color:#1aabbb">{{ preschooler.gender }}</td>
+                                        {% else %}
+                                        <td class="text-uppercase textShadow" style="color:#e93fca">{{ preschooler.gender }}</td>
+                                        {% endif %}
+                                        <td>{{ preschooler.birthday }}</td>
+                                        {% if preschooler.age_measured == 'Undefined' %}
+                                            <td>No Measuring Record</td>
+                                        {% else %}
+                                            <td>{{ preschooler.age_measured }} Months</td>
+                                        {% endif %}
+    
+                                        {% if preschooler.wfa is None %}
+                                            <td style="background-color: rgb(211, 211, 211);"> No Data Record </td>
+                                        {% elif preschooler.wfa > 2.0 %}
+                                            <td style="background-color: rgb(242, 98, 33);"> Overweight ({{ preschooler.wfa }})</td>
+                                        {% elif preschooler.wfa >= -2.0 and preschooler.wfa <= 2.0 %}
+                                            <td style="background-color: rgb(0, 165, 79);"> Normal ({{ preschooler.wfa }})</td>
+                                        {% elif preschooler.wfa >= -3.0 and preschooler.wfa < -2.0 %}
+                                            <td style="background-color: rgb(255, 241, 2);"> Underweight ({{ preschooler.wfa }})</td>
+                                        {% else %}
+                                            <td style="background-color: rgb(238, 29, 35);"> Severely Underweight ({{ preschooler.wfa }})</td>
+                                        {% endif %}
+    
+                                        {% if preschooler.hfa is None %}
+                                            <td style="background-color: rgb(211, 211, 211);"> No Data Record </td>
+                                        {% elif preschooler.hfa > 2.0 %}
+                                            <td style="background-color: rgb(0, 165, 79);"> Tall ({{preschooler.hfa }})</td>
+                                        {% elif preschooler.hfa >= -2.0 and preschooler.hfa <= 2.0 %}
+                                            <td style="background-color: rgb(0, 165, 79);"> Normal ({{ preschooler.hfa }})</td>
+                                        {% elif preschooler.hfa >= -3.0 and preschooler.hfa < -2.0 %}
+                                            <td style="background-color: rgb(255, 241, 2);"> Stunted ({{ preschooler.hfa }})</td>
+                                        {% else %}
+                                            <td style="background-color: rgb(238, 29, 35);"> Severely Stunted ({{ preschooler.hfa }})</td>
+                                        {% endif %}
+    
+    
+                                        {% if preschooler.whfa is None %}
+                                            {% if preschooler.height < 45.0 %}
+                                                <td class="bg-info" > Special Case <p class="text text-small m-0"> (Too Small for WHFA Tagging) </p></td>
+                                            {% elif preschooler.height > 110.0 %}
+                                                <td class="bg-info" > Special Case <p class="text text-small m-0"> (Too Tall for WHFA Tagging) </p></td>
+                                            {% else %}
+                                                <td style="background-color: rgb(211, 211, 211);"> No Data Record </td>
+                                            {% endif %}
+    
+                                        {% elif preschooler.whfa > 3.0%}
+                                            <td style="background-color: rgb(242, 98, 33);"> Obese ({{ preschooler.whfa }})</td>
+                                        {% elif preschooler.whfa > 2.0 and preschooler.whfa <= 3.0 %}
+                                            <td style="background-color: rgb(242, 98, 33);"> Overweight ({{ preschooler.whfa }})</td>
+                                        {% elif preschooler.whfa >= -2.0 and preschooler.whfa <= 2.0 %}
+                                            <td style="background-color: rgb(0, 165, 79);"> Normal ({{ preschooler.whfa}})</td>
+                                        {% elif preschooler.whfa >= -3.0 and preschooler.whfa < -2.0 %}
+                                            <td style="background-color: rgb(255, 241, 2);"> Moderately Wasted ({{ preschooler.whfa }})</td>
+                                        {% else %}
+                                            <td style="background-color: rgb(238, 29, 35);"> Severely Wasted ({{preschooler.whfa }})</td>
+                                        {% endif %}
+                                        
+                                        {% if preschooler.vaccine_count == 8 %}
+                                        <td class=" text-success textShadow">Complete</td>
+                                        {% elif preschooler.vaccine_count == 0 %}
+                                            <td class=" text-danger textShadow">No Record</td>
+                                        {% else %}
+                                            <td class=" text-warning textShadow">Incomplete</td>
+                                        {% endif %}
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </div>
 </div>
 </body>
